# Repo-doc

./: .gitignore  README.md  buildspec-backend.yml  dev.docker-compose.yml  docker-compose.yml  docker_setup.sh  example.code-workspace  mkdocs.yml  requirements.txt  run.sh
Repository Documentation/: app.py
Repository Documentation/src/: llm_utils.py  parsers.py  priority.py  repo_mapping.py
backend/: Dockerfile  README.md  dev.Dockerfile  entrypoint.sh  genms_kernel_config.json  pyproject.toml
backend/app/: main.py
backend/app/core/: paths.py  state.py
backend/app/routers/: README.md  chat.py  docs.py  example.py  export.py  graph.py  llm.py  repo.py
backend/app/schemas/: README.md  generic.py  repo_doc.py
backend/app/src/: __init__.py  calls_report.py  code_utils.py  doc_gen.py  doc_gen_export.py  filters.py  import_resolver.py  llm_utils.py  loader.py  mkdocs_ui.py  repo_mapping.py
backend/tests/: conftest.py
frontend/: Dockerfile  README.md  bun.lockb  dev.Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.mts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/components/: ChatPanel.vue  DocsViewer.vue  ExportButtons.vue  GraphViewer.vue  Header.vue  LLMSettings.vue  Main.vue  ProgressPanel.vue  RepoLoader.vue  SectionsEditor.vue
frontend/src/plugins/: index.ts  vuetify.ts
frontend/src/services/: backend.ts
frontend/src/stores/: store.ts
frontend/src/types/: types.ts
frontend/src/utils/: const.ts
src/: doc_gen.py  graph_build.py  loader.py  mkdocs_ui.py
