[project]
name = "repo-doc-backend"
version = "1.0.0"
description = "Repository Documentation API — FastAPI backend"
requires-python = ">=3.10,<3.13"
dependencies = [
    # --- web framework ---
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.2",

    # --- LLM / AI ---
    "litellm>=1.46.6",
    "langchain>=0.2.11",
    "langchain-core>=0.2.11",
    "langchain-litellm>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.1.0",

    # --- AWS / Bedrock ---
    "boto3>=1.34.146",

    # --- repo parsing ---
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.10.0",
    "sqlglot>=23.0.0",
    "tiktoken>=0.7.0",

    # --- doc generation ---
    "requests>=2.32.0",
    "fpdf2>=2.7.9",
    "python-docx>=1.1.2",
    "markdown>=3.6",
    "pymdown-extensions>=10.8",

    # --- mkdocs serving ---
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pyyaml>=6.0.1",

    # --- http client (mkdocs proxy) ---
    "httpx>=0.27.0",

    # --- utilities ---
    "pillow>=10.4.0",
    "numpy>=1.26.4",
]

packages = [
    { include = "app", from = "." },
]

[dependency-groups]
dev = [
    "pytest>=8.3.1",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.4",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
unfixable = ["F401", "F841"]
extend-select = ["I", "N"]
